alignmentissue fixed12

--- a/respon.css
+++ b/respon.css
@@ -377,7 +377,7 @@ nav ul {
 
     }
     .phone-items{
-        top: 30px;
+        top: 35px;
         margin-left: 43%;
     }
     .hero-container{
